--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs?useLegacyDatetimeCode=false&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Chicago
-spring.datasource.username=techjobs
-spring.datasource.password=techjobs
+spring.datasource.url=jdbc:mysql://localhost:3306/tech_jobs_auth?useLegacyDatetimeCode=false&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Chicago
+spring.datasource.username=tech_jobs_auth
+spring.datasource.password=techjobsauth
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
